# ATracker-data-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
atracker_data_parser/: __main__.py  time_data_parser.py
chrono_parser/: __main__.py  sqlite_reader.py  time_data_parser.py
